--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -25,14 +25,17 @@
   "item.dragnpets.ringneck_spawn_egg": "Ringneck Parrot Spawn Egg",
   "entity.dragnpets.ringneck": "Ringneck Parrot",
 
-  "item.dragnpets.wolf": "Raw Dog",
+  "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
 
-  "item.dragnpets.cat": "Raw Cat",
+  "item.dragnpets.cat": "Cat",
   "item.dragnpets.cooked_cat": "Cooked Cat",
 
-  "item.dragnpets.parrot_thigh": "Raw Parrot Thigh",
+  "item.dragnpets.parrot_thigh": "Parrot Thigh",
   "item.dragnpets.cooked_parrot_thigh": "Cooked Parrot Thigh",
+
+  "item.dragnpets.tropical_fish_fillet": "Tropical Fish Fillet",
+  "item.dragnpets.cooked_tropical_fish_fillet": "Cooked Tropical Fish Fillet",
 
   "item.dragnpets.tropical_fish_roe": "Tropical Fish Roe",
 
