--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -31,6 +31,9 @@
   "item.dragnpets.doberman_spawn_egg": "Doberman Pinscher Spawn Egg",
   "entity.dragnpets.doberman": "Doberman Pinscher",
 
+  "item.dragnpets.o_cat_spawn_egg": "Common Cat Spawn Egg",
+  "entity.dragnpets.o_cat": "Common Cat",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
 
