--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -40,6 +40,9 @@
   "item.dragnpets.husky_spawn_egg": "Husky Spawn Egg",
   "entity.dragnpets.husky": "Husky",
 
+  "item.dragnpets.pyrenees_spawn_egg": "Great Pyrenees Spawn Egg",
+  "entity.dragnpets.pyrenees": "Great Pyrenees",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
 
