--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -44,6 +44,9 @@
   "item.dragnpets.pyrenees_spawn_egg": "Great Pyrenees Spawn Egg",
   "entity.dragnpets.pyrenees": "Great Pyrenees",
 
+  "item.dragnpets.border_collie_spawn_egg": "Border Collie Spawn Egg",
+  "entity.dragnpets.border_collie": "Border Collie",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
 
