--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -47,6 +47,9 @@
   "item.dragnpets.border_collie_spawn_egg": "Border Collie Spawn Egg",
   "entity.dragnpets.border_collie": "Border Collie",
 
+  "item.dragnpets.maine_coon_spawn_egg": "Maine Coon Spawn Egg",
+  "entity.dragnpets.maine_coon": "Maine Coon",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
 
