--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -64,6 +64,9 @@
   "item.dragnpets.kornish_rex_spawn_egg": "Kornish Rex Spawn Egg",
   "entity.dragnpets.kornish_rex": "Kornish Rex",
 
+  "item.dragnpets.cocker_spaniel_spawn_egg": "Cocker Spaniel Spawn Egg",
+  "entity.dragnpets.cocker_spaniel": "Cocker Spaniel",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
 
