--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -67,6 +67,9 @@
   "item.dragnpets.cocker_spaniel_spawn_egg": "Cocker Spaniel Spawn Egg",
   "entity.dragnpets.cocker_spaniel": "Cocker Spaniel",
 
+  "item.dragnpets.whippet_spawn_egg": "Whippet Spawn Egg",
+  "entity.dragnpets.whippet": "Whippet",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
 
