--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -82,6 +82,9 @@
   "item.dragnpets.manx_spawn_egg": "Manx Spawn Egg",
   "entity.dragnpets.manx": "Manx",
 
+  "item.dragnpets.american_ridgeback_spawn_egg": "American Ridgeback Spawn Egg",
+  "entity.dragnpets.american_ridgeback": "American Ridgeback",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
   "item.dragnpets.cat": "Cat",
