-Foxhound, Jack Russell

--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -91,6 +91,9 @@
   "item.dragnpets.coonhound_spawn_egg": "Coonhound Spawn Egg",
   "entity.dragnpets.coonhound": "Coonhound",
 
+  "item.dragnpets.foxhound_spawn_egg": "Foxhound Spawn Egg",
+  "entity.dragnpets.foxhound": "Foxhound",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
   "item.dragnpets.cat": "Cat",
