-Foxhound, Jack Russell

--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -94,6 +94,9 @@
   "item.dragnpets.foxhound_spawn_egg": "Foxhound Spawn Egg",
   "entity.dragnpets.foxhound": "Foxhound",
 
+  "item.dragnpets.jack_russell_spawn_egg": "Jack Russell Spawn Egg",
+  "entity.dragnpets.jack_russell": "Jack Russell",
+
   "item.dragnpets.wolf": "Dog",
   "item.dragnpets.cooked_wolf": "Cooked Dog",
   "item.dragnpets.cat": "Cat",
