--- a/src/main/resources/assets/dragnpets/lang/en_us.json
+++ b/src/main/resources/assets/dragnpets/lang/en_us.json
@@ -113,6 +113,18 @@
   "item.dragnpets.dog_sled": "Dog Sled",
   "entity.dragnpets.dog_sled": "Dog Sled",
 
+  "item.dragnpets.leather_dog_armor": "Leather Dog Armor",
+  "item.dragnpets.chainmail_dog_armor": "Chainmail Dog Armor",
+  "item.dragnpets.copper_dog_armor": "Copper Dog Armor",
+  "item.dragnpets.iron_dog_armor": "Iron Dog Armor",
+  "item.dragnpets.riot_dog_armor": "Riot Dog Armor",
+  "item.dragnpets.quartz_dog_armor": "Quartz Dog Armor",
+  "item.dragnpets.gold_dog_armor": "Gold Dog Armor",
+  "item.dragnpets.emerald_dog_armor": "Emerald Dog Armor",
+  "item.dragnpets.diamond_dog_armor": "Diamond Dog Armor",
+  "item.dragnpets.netherite_dog_armor": "Netherite Dog Armor",
+  "item.dragnpets.obsidian_dog_armor": "Obsidian Dog Armor",
+
   "item.dragnpets.black_vest": "Black Vest",
   "item.dragnpets.blue_vest": "Blue Vest",
   "item.dragnpets.brown_vest": "Brown Vest",
